[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "execnet"
description = "execnet: rapid multi-Python deployment"
readme = "README.rst"
license = "MIT"
authors = [
    { name = "holger krekel and others" },
]
requires-python = ">=3.7"
dynamic = [
  "version",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Networking",
]
[project.optional-dependencies]
dev = [
  "hatch",
]
docs = [
  "pyyaml",
  "sphinx",
]
testing = [
  "pytest",
  "pytest-timeout",
]

[project.urls]
Homepage = "https://execnet.readthedocs.io/en/latest/"


[tool.pytest.ini_options]
timeout = 20
addopts = "-ra"
testpaths = ["testing"]


[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.test]
features = ["testing"]

[[tool.hatch.envs.test.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11", "pypy3.7","pypy3.8"]

[tool.hatch.envs.test.scripts]
test = "pytest {args:testing}"


[tool.hatch.envs.docs]
features = ["docs"]

[tool.hatch.envs.docs.scripts]
html = "sphinx-build -W -b html doc doc/_build"


[tool.hatch.envs.pre-commit]
detached = true
dependences = ["pre-commit>1.11.0"]

[tool.hatch.envs.pre-commit.scripts]
all = "pre-commit run --all-files --show-diff-on-failure"

[tool.hatch.build.hooks.vcs]
version-file = "src/execnet/_version.py"

[tool.hatch.build]
sources = ["src"]


[tool.mypy]
python_version = "3.8"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
