[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "execnet"
dynamic = ["version"]
description = "execnet: rapid multi-Python deployment"
long_description_file = "README.rst"
license = "MIT"
requires-python = ">=3.7"
authors = [
    { name = "holger krekel and others" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Networking",
]

[project.optional-dependencies]
testing = [
    "pre-commit",
    "pytest",
    "tox",
    "hatch",
]

[project.urls]
Homepage = "https://execnet.readthedocs.io/en/latest/"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "execnet/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/execnet",
]


[tool.mypy]
python_version = "3.7"
