[build-system]
requires = [
    "hatchling>=1.26",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "execnet"
dynamic = ["version"]
description = "execnet: rapid multi-Python deployment"
readme = {"file" = "README.rst", "content-type" = "text/x-rst"}
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "holger krekel and others" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Networking",
]

[project.optional-dependencies]
testing = [
    "pre-commit",
    "pytest",
    "tox",
    "hatch",
]

[project.urls]
Homepage = "https://execnet.readthedocs.io/en/latest/"

[tool.ruff.lint]
extend-select = [
    "B",    # bugbear
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "PYI",  # flake8-pyi
    "UP",   # pyupgrade
    "RUF",  # ruff
    "W",    # pycodestyle
    "PIE",  # flake8-pie
    "PGH",  # pygrep-hooks
    "PLE",  # pylint error
    "PLW",  # pylint warning
]
ignore = [
    # bugbear ignore
    "B007",  # Loop control variable `i` not used within loop body
    "B011",  # Do not `assert False` (`python -O` removes these calls)
    # pycodestyle ignore
    "E501",  # Line too long
    "E741",  # Ambiguous variable name
    # ruff ignore
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
    # pylint ignore
    "PLW0603",  # Using the global statement
    "PLW0120",  # remove the else and dedent its contents
    "PLW2901",  # for loop variable overwritten by assignment target
    "PLR5501",  # Use `elif` instead of `else` then `if`
    "UP031",  # Use format specifiers instead of percent format
]

[tool.ruff.lint.isort]
force-single-line = true
known-third-party = ["src"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/execnet/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/doc",
    "/src",
    "/testing",
    "tox.ini",
]

[tool.mypy]
python_version = "3.8"
mypy_path = ["src"]
files = ["src", "testing"]
strict = true
warn_unreachable = true
warn_unused_ignores = false
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "eventlet.*",
    "gevent.thread.*",
]
ignore_missing_imports = true
